--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
         android:hint="@string/password_prompt"
-        android:drawableLeft="@drawable/Orange_lock"/>
+        android:drawableLeft="@drawable/orange_lock"/>
 
     <Button
         android:layout_width="wrap_content"
