--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,48 +4,70 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    android:background="@drawable/background_copy"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:gravity="center_horizontal">
-    
-    <EditText
+    tools:context=".MainActivity">
+
+    <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginTop="160dp"
-        android:hint="@string/username_prompt"
-        android:drawableLeft="@drawable/login_image"/>
+        android:layout_height="98dp"
+        android:layout_marginTop="0dp"
+        android:src="@drawable/illini_rso_image" />
+
+
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="105dp"
+        android:backgroundTint=""
+        android:drawableLeft="@drawable/login_image"
+        android:drawablePadding="5dp"
+        android:hint="@string/username_prompt"
+        android:paddingLeft="5dp"
+        android:background="@drawable/textview_border"/>
+
+    <EditText
+        android:layout_width="160dp"
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/textview_border"
+        android:drawableLeft="@drawable/orange_lock"
+        android:drawablePadding="5dp"
         android:hint="@string/password_prompt"
-        android:drawableLeft="@drawable/orange_lock"/>
+        android:paddingLeft="5dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:hint="@string/login_button"/>
+        android:layout_marginTop="12dp"
+        android:background="@drawable/textview_border"
+        android:hint="@string/login_button" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:text="@string/registration_prompt"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="35dp"
-            android:paddingStart="10dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/textview_border"
             android:paddingLeft="10dp"
-            android:textStyle="bold"
-            android:text="@string/registration_button"/>
+            android:paddingTop="8dp"
+            android:text="@string/registration_prompt" />
+
+        <TextView
+            android:layout_width="75dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/textview_border"
+            android:paddingLeft="8dp"
+            android:paddingTop="8dp"
+            android:text="@string/registration_button" />
 
     </LinearLayout>
-
 </LinearLayout>
