--- a/app/src/main/res/drawable/textview_border.xml
+++ b/app/src/main/res/drawable/textview_border.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:color="#e74b25"
-        android:width="4dp"/>
+        android:color="#000000"
+        android:width="2dp"/>
     <solid
-        android:color="#ffffff"/>
+        android:color="#FFFFFF"/>
 
 </shape>
