--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/background_copy"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".RegisterActivity">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -15,37 +15,46 @@
         android:layout_marginTop="0dp"
         android:src="@drawable/illini_rso_image" />
 
-
-
     <EditText
-        android:layout_width="160dp"
+        android:layout_width="190dp"
         android:layout_height="40dp"
         android:layout_marginTop="105dp"
-        android:id="@+id/editText_username"
+        android:id="@+id/editText_create_username"
         android:drawableLeft="@drawable/login_image"
         android:drawablePadding="5dp"
-        android:hint="@string/username_prompt"
+        android:hint="@string/createUsername_prompt"
         android:paddingLeft="5dp"
         android:background="@drawable/textview_border"/>
 
     <EditText
-        android:layout_width="160dp"
+        android:layout_width="190dp"
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
-        android:id="@+id/editText_password"
+        android:id="@+id/editText_create_password"
         android:background="@drawable/textview_border"
         android:drawableLeft="@drawable/orange_lock"
         android:drawablePadding="5dp"
-        android:hint="@string/password_prompt"
+        android:hint="@string/createPassword_prompt"
+        android:paddingLeft="5dp" />
+
+    <EditText
+        android:layout_width="190dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
+        android:id="@+id/editText_cnf_password"
+        android:background="@drawable/textview_border"
+        android:drawableLeft="@drawable/orange_lock"
+        android:drawablePadding="5dp"
+        android:hint="@string/confirmPassword_prompt"
         android:paddingLeft="5dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginTop="12dp"
-        android:id="@+id/button_login"
+        android:id="@+id/button_createAccount"
         android:background="@drawable/textview_border"
-        android:hint="@string/login_button" />
+        android:hint="@string/createAccount_button" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -53,28 +62,30 @@
         android:orientation="horizontal">
 
         <TextView
-            android:layout_width="100dp"
+            android:layout_width="150dp"
             android:layout_height="35dp"
             android:layout_marginTop="12dp"
             android:background="@drawable/textview_border"
             android:paddingLeft="10dp"
-            android:textStyle="bold"
             android:textColor="#e74b25"
             android:paddingTop="8dp"
-            android:text="@string/registration_prompt" />
+            android:textStyle="bold"
+            android:text="@string/alreadyRegistered_prompt" />
 
         <TextView
             android:layout_width="75dp"
             android:layout_height="35dp"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="12dp"
-            android:background="@drawable/textview_border"
-            android:id="@+id/textView_register"
             android:textStyle="bold"
+            android:background="@drawable/textview_border"
             android:textColor="#003d7e"
-            android:paddingLeft="8dp"
+            android:id="@+id/textView_register"
+            android:paddingLeft="17dp"
             android:paddingTop="8dp"
-            android:text="@string/registration_button" />
+            android:text="@string/alreadyRegister_button" />
 
     </LinearLayout>
+
+
 </LinearLayout>
