--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -52,6 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginTop="12dp"
+        android:textColorHint="#000000"
         android:id="@+id/button_createAccount"
         android:background="@drawable/textview_border"
         android:hint="@string/createAccount_button" />
