Created SQLDatabase.  Login works.  Login does not currently have an activity to direct to.

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,7 +19,7 @@
         android:layout_width="190dp"
         android:layout_height="40dp"
         android:layout_marginTop="105dp"
-        android:id="@+id/editText_create_username"
+        android:id="@+id/editText_username"
         android:drawableLeft="@drawable/login_image"
         android:drawablePadding="5dp"
         android:hint="@string/createUsername_prompt"
@@ -30,7 +30,7 @@
         android:layout_width="190dp"
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
-        android:id="@+id/editText_create_password"
+        android:id="@+id/editText_password"
         android:background="@drawable/textview_border"
         android:drawableLeft="@drawable/orange_lock"
         android:drawablePadding="5dp"
