--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,8 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginTop="12dp"
+        android:textColorHint="#000000"
+        android:textStyle="bold"
         android:id="@+id/button_login"
         android:background="@drawable/textview_border"
         android:hint="@string/login_button" />
