--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -29,6 +29,7 @@
     <EditText
         android:layout_width="190dp"
         android:layout_height="40dp"
+        android:inputType="textPassword"
         android:layout_marginTop="20dp"
         android:id="@+id/editText_password"
         android:background="@drawable/textview_border"
@@ -41,6 +42,7 @@
         android:layout_width="190dp"
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
+        android:inputType="textPassword"
         android:id="@+id/editText_cnf_password"
         android:background="@drawable/textview_border"
         android:drawableLeft="@drawable/orange_lock"
