--- a/app/src/main/res/menu/navigation_main_activity.xml
+++ b/app/src/main/res/menu/navigation_main_activity.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<Menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/reload"
@@ -37,4 +37,4 @@
         android:title="@string/swap_first_for_last"
         />
 
-</LinearLayout>
+</menu>
